--- a/style.css
+++ b/style.css
@@ -1,33 +1,118 @@
-.nav-bar {
-    /* border: 1px solid red; */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');
+
+body{
+    font-family: 'Roboto Mono', monospace;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
+    margin: auto;
+    padding: 25px;
+    background: #E1E1ED;
+}
+*{
+    box-sizing: border-box;
 }
 
-.nav-bar > * {
-    margin-left: 15px;
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+.header a{
+    text-decoration: none;
+    color: black;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.content {
-    /* border: 1px solid blue; */
+.header a:hover{
+    border-bottom: 1px solid black;
+}
+
+.container{
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
-.content > * {
-    margin-bottom: 20px;
+footer{
+    position: absolute;
+    width: 100%;
+    bottom: 0%;
 }
 
-.row {
-    /* border: 1px solid green; */
+.foo{
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.row > button {
-    margin-left: 15px;
+.groupInput{
+    width: 50%;
+    position: relative;
+    z-index: 90;
+}
+.groupInput .search{
+    
+    position: absolute;
+    left: 20px;
+    bottom: -5px;
+    z-index: 100;
+}
+.groupInput input{
+    width: 100%;
+    background-color: white;
+    border-radius: 25px;
+    border: none;
+    transition: 0.5s ease all;
+    border: 3px solid #B4BEC9;
+    height: 35px;
+    line-height: 35px;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 1em;
+    text-align: center;
+    padding: 0 35px 0 35px;
+    margin: 10px;
+    transition: 0.3s;
 }
 
-.logo {
-    margin-top: 200px;
+.groupInput .micro{
+    
+    position: absolute;
+    right: 2px;
+    bottom: -5px;
+    z-index: 100;
+}
+
+input:focus{
+    outline: none;
+    border: 3px solid #0075ff;
+    box-shadow: 0px 5px 30px rgba(163,163,163,0.4);
+}
+
+button{
+    background-color: #C9D9E1;
+    font-weight: 400;
+    font-size: 1em;
+    text-align: center;
+    margin: 10px;
+    border-radius: 10px;
+    font-family: 'Roboto Mono', monospace;
+    outline: none;
+    border: none;
+    padding: 10px;
+}
+
+button:hover{
+    background: #D9D9D9;
+    box-shadow: 0px 5px 15px rgba(163,163,163,0.4);
+}
+
+.container img{
+    margin: 20px;
 }
