--- a/style.css
+++ b/style.css
@@ -1,31 +1,74 @@
 .nav-bar {
     /* border: 1px solid red; */
     display: flex;
+    line-height: 24px;
+    vertical-align: middle;
     flex-direction: row-reverse;
+    color: #3c4043;
+    font-family: arial,sans-serif;
+    text-align: center;
+    align-items: center;
+    font-size: 13px;
+
 }
 
 .nav-bar > * {
     margin-left: 15px;
+    margin-top: 15px;
+    margin-right: 15px;
+
+    
 }
 
+.menu{
+cursor: pointer;
+}
 .content {
     /* border: 1px solid blue; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #3c4043;
+    font-family: arial,sans-serif;
+    font-size: 13px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .content > * {
     margin-bottom: 20px;
 }
-
+.barra{
+    height: 34px;
+    width: 538px;
+    max-width: 584px;
+    font-size: 16px;
+    color: rgba(0,0,0,.87);
+}
 .row {
     /* border: 1px solid green; */
     display: flex;
+
+}
+.input{
+width: 50% !important;
+}
+a:link {
+    text-decoration: none;
+  }
+a:hover {
+    text-decoration: underline;
+  }
+
+.links {
+    color: black 
+    
 }
 
 .row > button {
     margin-left: 15px;
+    width:fit-content;
+    font-size: 14px;
 }
 
 .logo {
