--- a/Jonathan_Anchundia/style.css
+++ b/Jonathan_Anchundia/style.css
@@ -31,3 +31,24 @@
 .logo {
     margin-top: 200px;
 }
+
+.inputText{
+    border-radius: 20px;
+    height: 34px;
+    width: 500px;
+}
+
+.link{
+    text-decoration: none;
+}
+
+.btn{
+    color: #f8f9fa;
+    background-color: #f8f9fa;
+    color:#3c4043;
+    height: 36px;
+    border-radius: 4px;
+    border: 1px solid #f8f9fa;
+    font-size: 14px;
+    margin: 11px 4px;
+}
