--- a/Jonathan_Anchundia/style.css
+++ b/Jonathan_Anchundia/style.css
@@ -36,13 +36,27 @@
     border-radius: 20px;
     height: 34px;
     width: 500px;
+    font-size: 16px;
 }
 
 .link{
     text-decoration: none;
+    margin-top: 17px;
+    font-size: 16px;
 }
 
 .btn{
+    color: #f8f9fa;
+    background-color: #f8f9fa;
+    color:#3c4043;
+    height: 36px;
+    border-radius: 4px;
+    border: 1px solid #f8f9fa;
+    font-size: 14px;
+    margin: 11px 4px;
+}
+
+.btnAcceder{
     color: #f8f9fa;
     background-color: #f8f9fa;
     color:#3c4043;
